[gd_scene load_steps=2 format=3 uid="uid://csofpk2pj6d50"]

[ext_resource type="Script" path="res://project/pause_menu/pause_menu.gd" id="1_64o7o"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_64o7o")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1157.0
offset_bottom = 646.0
color = Color(0.513233, 0.513233, 0.513233, 0.192157)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -95.0
offset_top = -50.5
offset_right = 95.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Sleep" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Sleep (toggle day/night)"

[node name="Instructions" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "move: w, a, s, & d
jump: space
attack: q"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Sleep" to="." method="_on_sleep_pressed"]
